--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Three.js OBJ Loader with Skybox</title>
+    <title>Z 7esabat</title>
     <style>
         body { margin: 0; }
         canvas { display: block; }
